Update whole UI color, bubble touch, and fix layout problem

--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    @apply bg-white text-gray-900 text-base;
+    @apply w-screen bg-white text-gray-900 text-base overflow-hidden;
 }
 
 .button-link {
